# KmeansCUDA

./: CMakeLists.txt  Kluster.cpp  Kluster.h  KmeansInitializer.cpp  KmeansInitializer.h  Point.h  main.cpp  main.cu
Initialization/: initialPointsPlotter.py  initial_points.txt  real_centroids.txt
ParallelCUDA/: KmeansCUDA.cu  KmeansCUDA.cuh  KmeansParallelCUDASolver.cpp  KmeansParallelCUDASolver.h
Results/: ResultPlotter.py
Results/ParallelCUDA/: clustered_points.txt
Results/Sequential/: ResultPlotterSequential.py  clustered_points.txt
sequential/: KmeansSequentialSolver.cpp  KmeansSequentialSolver.h
